--- a/synclyrics/config.yaml
+++ b/synclyrics/config.yaml
@@ -1,6 +1,7 @@
 name: "SyncLyrics"
-version: "1.0.3"
+version: "1.0.4"
 slug: "synclyrics"
+init: false
 description: "Real-time synchronized lyrics for your smart home."
 url: "https://github.com/AnshulJ999/SyncLyrics"
 arch:
