--- a/synclyrics/config.yaml
+++ b/synclyrics/config.yaml
@@ -1,5 +1,5 @@
 name: "SyncLyrics"
-version: "1.1.6"
+version: "1.2.0"
 slug: "synclyrics"
 init: false
 description: "Real-time synchronized lyrics for your smart home."
@@ -13,21 +13,31 @@ arch:
 startup: application
 boot: auto
 map:
-  - "config:rw"
+  - "addon_config:rw"  # Maps to /addon_configs/synclyrics on host, appears as /config in container
 options:
   spotify_client_id: ""
   spotify_client_secret: ""
   spotify_redirect_uri: "http://homeassistant.local:9012/callback"
   spotify_base_url: "https://fake-spotify-lyrics-api-azure.vercel.app"
+  lastfm_api_key: ""
+  fanart_tv_api_key: ""  # Optional - for high-quality artist images (get key at https://fanart.tv/)
+  audiodb_api_key: ""  # Optional - backup source for artist images
   server_port: 9012
-  spotify_cache_path: "/config/.spotify_cache"  # Persistent storage for Spotify tokens
+  spotify_cache_path: "/config/.spotify_cache"  # Persistent storage for Spotify tokens (in addon_config)
+  debug: false  # Enable debug mode for troubleshooting
+  log_level: "INFO"  # Logging level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 schema:
   spotify_client_id: str
   spotify_client_secret: str
   spotify_redirect_uri: str
   spotify_base_url: str
+  lastfm_api_key: str
+  fanart_tv_api_key: str
+  audiodb_api_key: str
   server_port: int
   spotify_cache_path: str
+  debug: bool
+  log_level: str
 # ports:
 #   9012/tcp: 9012
 host_network: true
