--- a/synclyrics/config.yaml
+++ b/synclyrics/config.yaml
@@ -14,6 +14,14 @@ startup: application
 boot: auto
 map:
   - "addon_config:rw"  # Maps to /addon_configs/synclyrics on host, appears as /config in container
+backup_exclude:
+  - "**/album_art_database"
+  - "**/cache"
+  - "**/*.db"
+  - "album_art_database"     # Excludes the entire folder
+  - "cache"                  # Excludes the entire folder
+  - "*.db"                   # Excludes .db files
+
 options:
   spotify_client_id: ""
   spotify_client_secret: ""
