--- a/.github/workflows/hass-addon-publish.yml
+++ b/.github/workflows/hass-addon-publish.yml
@@ -23,7 +23,8 @@ on:
 
 env:
   GHCR_REGISTRY: ghcr.io
-  IMAGE_BASE: ghcr.io/${{ github.repository_owner }}/synclyrics-ha
+  # Note: Must be lowercase for GHCR - github.repository_owner preserves case
+  IMAGE_BASE: ghcr.io/anshulj999/synclyrics-ha
 
 jobs:
   build:
